ubuntuについての実行方法を追記する。